# Cplusplus-CRUD-application

./: CMakeLists.txt  README.md  main.cpp
data/include/: DAL.h  DAO.h  Person.h  person-soci_binding.h
data/source/: DAL.cpp  DAO.cpp  Person.cpp
gui/include/: data-view.h  main-frame.h  menubar.h  unique-dialog.h  user-dialog.h
gui/source/: data-view.cpp  main-frame.cpp  menubar.cpp  unique-dialog.cpp  user-dialog.cpp
test/: gui_db
